[gd_scene load_steps=6 format=3 uid="uid://cegdys4t1axat"]

[ext_resource type="Texture2D" uid="uid://ias4drqykag3" path="res://assets/MainMenu/background.png" id="1_qwndn"]
[ext_resource type="Script" path="res://scenes/mainMenu/main_menu.gd" id="1_xkdsd"]
[ext_resource type="FontFile" uid="uid://dvrxts7aq8swe" path="res://assets/MainMenu/WonderworldPersonalUseRegular-gxdo3.otf" id="3_4tx0e"]

[sub_resource type="LabelSettings" id="LabelSettings_5v0p7"]
font = ExtResource("3_4tx0e")
font_size = 80
font_color = Color(0.556863, 0, 0.913725, 1)
outline_size = 5
outline_color = Color(0, 1, 1, 1)

[sub_resource type="SystemFont" id="SystemFont_ce44j"]
font_names = PackedStringArray("Badly Stuffed Animal DEMO")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkdsd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qwndn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 3.0
offset_right = 27.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 92

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 0
text = "The Sound of Hope"
label_settings = SubResource("LabelSettings_5v0p7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ce44j")
theme_override_font_sizes/font_size = 30
text = "Start
"

[node name="CreditsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ce44j")
theme_override_font_sizes/font_size = 30
text = "Credits
"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ce44j")
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_down"]
